미러 서버용 package.json 수정

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "razzle build",
     "test": "razzle test --env=jsdom",
     "start": "NODE_ENV=production node build/server.js",
-    "start:onlinux": "NODE_ENV=production pm2 start build/server.js -i --name YAWORK_API",
+    "start:onlinux": "npm run build && NODE_ENV=production pm2 start build/server.js -i 2 --name YAWORK_WEB",
     "dist": "node dist.js",
     "lint": "tslint -c tslint.json \"src/**/*.ts*\""
   },
