--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mobx": "^5.0.3",
     "mobx-react": "^5.2.3",
     "moment": "^2.24.0",
+    "newrelic": "^6.6.0",
     "react": "^16.12.0",
     "react-chartjs-2": "^2.8.0",
     "react-dates": "^21.5.0",
@@ -53,6 +54,7 @@
     "@types/express": "^4.11.1",
     "@types/jest": "^22.2.3",
     "@types/luxon": "^1.2.2",
+    "@types/newrelic": "^6.4.0",
     "@types/node": "^8.10.59",
     "@types/react": "^16.9.13",
     "@types/react-dates": "^17.1.5",
