--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,8 @@
     "webpack",
     "jest",
     "razzle.config.js",
-    "dist.js"
+    "dist.js",
+    "newrelic.js"
   ],
   "types": ["typePatches", "node", "webpack-env"]
 }
