--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start:dev": "razzle start",
     "start:debug": "razzle start --inspect",
-    "build": "razzle build",
+    "build": "NODE_OPTIONS=--max_old_space_size=1024 razzle build",
     "test": "razzle test --env=jsdom",
     "start": "NODE_ENV=production node ./build/server.js",
     "start:onlinux": "npx pm2 stop YAWORK_WEB && NODE_ENV=production npx pm2 start build/server.js -i 2 --name YAWORK_WEB",
